version 1.1.2
- 'violating', 'satisfying' and 'lacking' are now generic (useful for validatedb)

version 1.1.1
- 'aggregate' with argument by="rule" now ensures that the rule-by-rule
  output is in the same order as in the confrontation object (they
  used to be grouped by dimension structure). This fixes an issue
  where plots of validation objects would have the wrong placement
  of y-axis labels. (Thanks to Jonas Klingwort for reporting). 
- Fix in plot method for 'validation' objects: test for errors yielded a
  warning.

version 1.1.0
- Added support for SDMX codelists from SDMX REST APIs, see
  'sdmx_codelist', 'estat_codelist', 'global_codelist'.
- plot-validation method now prints a message to console when one or more
  rules yielded an error so it's explicit that not all data can be plotted.
  (Thanks to John Kennedy for pointing this out).
- Fix: 'aggregate' would fail for validations based on empty data frames (thanks
  to Matthials Gomolka for reporting).
- Fix: empty names in a data frame passed as '.data' to 'validator' would
  yield empty names in the resulting 'validator' object. (Thanks to Wytze
  Gelderloos for reporting)

version 1.0.4
- Added 'rmarkdown' to 'Suggests' as requested by CRAN
- Small updates for compatibility with new version of 'settings'

version 1.0.2
- Updated CITATION since paper will be published by JSS (Thanks to Achim Zeileis).
- Improved 'print' method of all objects inheriting from 'confrontation' (#129)
- 'compare' now also works with 'tibble' objects -- who disguise themselves
  as data frames but behave differently.
- Fix: add_indicators() would fail or not add results properly in some
  cases. (Thanks to Jos de Waard for reporting #128).
- Fix: 'as.data.frame' would fail for validator objects where at least 
  one of the rules contained a var_group(). (Thanks to Matthias Gomolka
  for reporting). The issue with 'var_group', and ':=' assignments is that 