@@ -13,7 +13,7 @@ rules:
   label: speed positivity
   description: |
     speed can not be negative
-  created: 2022-07-11 10:01:57
+  created: 2022-07-11 10:05:57
   origin: myrules.yaml
   meta:
     language: validate 0.9.3.36
@@ -24,7 +24,7 @@ rules:
   description: |
     The speed to distance ratio can
     not exceed 1.5.
-  created: 2022-07-11 10:01:57
+  created: 2022-07-11 10:05:57
   origin: myrules.yaml
   meta:
     language: validate 0.9.3.36
